// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Resizer > Should match its default snapshot 1`] = `
<div
  class="flex max-w-full justify-end flex-col-reverse"
  data-id="sds-resizer"
>
  <div
    class="flex peer justify-center self-center hover:cursor-grab active:cursor-grabbing opacity-30 hover:opacity-100 relative z-20 flex-row mx-auto -mb-4 w-full h-4"
  >
    <div
      class="absolute h-4"
    >
      <svg
        class="mx-auto"
        height="16"
        viewBox="0 0 10 10"
        width="64"
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          fill="currentColor"
          height="4"
          rx="2"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="0"
          width="32"
          x="-11.5"
          y="4"
        />
      </svg>
    </div>
  </div>
  <div
    class="border-solid border-transparent peer-hover:dark:border-white peer-hover:border-black after:content-[''] after:border-solid after:to-transparent after:border-transparent after:z-30 dark:after:via-black/5 dark:after:from-black/40 after:from-black/5 border-b overflow-y-auto overflow-x-hidden peer-hover:after:border-b peer-hover:after:w-full peer-hover:after:-mt-12 peer-hover:after:h-12 peer-hover:after:bg-gradient-to-t after:block after:sticky after:bottom-0 after:w-fit"
  >
    <div>
      <!-- @slot The slot contains the content to be resized (either vertically or horizontally).  -->
      
      
    </div>
  </div>
</div>
`;

exports[`Resizer > Should match with specific props and src snapshot 1`] = `
<div
  class="flex max-w-full justify-end flex-row-reverse"
  data-id="sds-resizer"
>
  <div
    class="flex peer justify-center self-center hover:cursor-grab active:cursor-grabbing opacity-30 hover:opacity-100 relative z-20 flex-col ml-0 -mr-4 h-full w-4"
  >
    <div
      class="absolute w-4"
    >
      <svg
        class="my-auto"
        height="64"
        viewBox="0 0 10 10"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          fill="currentColor"
          height="32"
          rx="2"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="0"
          width="4"
          x="4"
          y="-11.5"
        />
      </svg>
    </div>
  </div>
  <div
    class="border-solid border-transparent peer-hover:dark:border-white peer-hover:border-black after:content-[''] after:border-solid after:to-transparent after:border-transparent after:z-30 dark:after:via-black/5 dark:after:from-black/40 after:from-black/5 border-r overflow-x-auto overflow-y-hidden peer-hover:after:border-r peer-hover:after:h-full peer-hover:after:-ml-12 peer-hover:after:w-12 peer-hover:after:bg-gradient-to-l after:block after:relative after:-right-full after:-top-full after:h-[calc(100%+8em)]"
  >
    <div>
      <!-- @slot The slot contains the content to be resized (either vertically or horizontally).  -->
      
      
    </div>
  </div>
</div>
`;
